--- a/TEDx/acts/index.html
+++ b/TEDx/acts/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <link rel="shortcut icon" type="image/x-icon" href="http://1.gravatar.com/blavatar/5eb168b0154768602b7da05b54081381?s=16" sizes="16x16">
 <link rel="icon" type="image/x-icon" href="http://1.gravatar.com/blavatar/5eb168b0154768602b7da05b54081381?s=16" sizes="16x16">
-<!-- InstanceBeginEditable name="doctitle" -->
+<!-- InstanceBeginEditable name="head1" -->
 <title>TEDxNCCU</title>
 <!-- InstanceEndEditable -->
 <link href="../css/jquery-ui.css" rel="stylesheet" type="text/css">
@@ -12,8 +12,11 @@
 <link href="../css/reset.css" rel="stylesheet" type="text/css">
 <!--link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"-->
 <link href="../css/tedxnccu2.css" rel="stylesheet" type="text/css">
-<!-- InstanceBeginEditable name="head" -->
+<!-- InstanceBeginEditable name="head2" -->
 <style>
+
+
+
 </style>
 <!-- InstanceEndEditable -->
 </head>
@@ -108,7 +111,7 @@
 			<li><a href="../act/FromIdeaToAction.html">From Idea to Action</a></li>
 			<li><a href="../sponsor.html">贊助我們</a></li>
 			<li><a href="../contact.html">聯絡我們</a></li>
-			<li><a href="../manageLogin.html">管理模式</a></li>
+			<li><a href="../manage/login.html">管理模式</a></li>
 		</ul>
 	</div>
 </footer>
