--- a/TEDx/manage/login.html
+++ b/TEDx/manage/login.html
@@ -4,15 +4,15 @@
 <meta charset="utf-8">
 <link rel="shortcut icon" type="image/x-icon" href="http://1.gravatar.com/blavatar/5eb168b0154768602b7da05b54081381?s=16" sizes="16x16">
 <link rel="icon" type="image/x-icon" href="http://1.gravatar.com/blavatar/5eb168b0154768602b7da05b54081381?s=16" sizes="16x16">
-<!-- InstanceBeginEditable name="doctitle" -->
+<!-- InstanceBeginEditable name="head1" -->
 <title>TEDxNCCU</title>
 <!-- InstanceEndEditable -->
-<link href="css/jquery-ui.css" rel="stylesheet" type="text/css">
+<link href="../css/jquery-ui.css" rel="stylesheet" type="text/css">
 <!--link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"-->
-<link href="css/reset.css" rel="stylesheet" type="text/css">
+<link href="../css/reset.css" rel="stylesheet" type="text/css">
 <!--link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"-->
-<link href="css/tedxnccu2.css" rel="stylesheet" type="text/css">
-<!-- InstanceBeginEditable name="head" -->
+<link href="../css/tedxnccu2.css" rel="stylesheet" type="text/css">
+<!-- InstanceBeginEditable name="head2" -->
 <style>
 .control-group { width:100%; margin-bottom:20px; width:550px; }
 .control-label { float:left; width:100px; text-align:left;padding: 14px 0px;background:rgba(3,3,3,.8); border-radius:2px; color:white; float:left; margin-right:10px; font-size:1em; text-align:center;    }
@@ -28,33 +28,33 @@
 <nav>
 	<div id="nav" class="container clearfix">
 		<div style="float:left;">
-			<img src="img/TEDxNCCU5.png" height="30" style="margin:8px 0px 3px 0px;">
+			<img src="../img/TEDxNCCU5.png" height="30" style="margin:8px 0px 3px 0px;">
 		</div>
 		<div style="float:right">
 			<ul id="mainNav" class="hrzUL clearfix">
-				<li><a href="index.html">首頁</a></li>
-				<li><a href="spnsors.html">贊助夥伴</a>
+				<li><a href="../index.html">首頁</a></li>
+				<li><a href="../spnsors.html">贊助夥伴</a>
 				</li>
 				<li class="withSubNav clearfix">
-					<a href="acts/index.html" >TED活動</a>
+					<a href="../acts/index.html" >TED活動</a>
 					<ul class="subNav">
 						<li><a href="#">2013 From Idea To Action</a></li>
 					</ul>
 				</li>
 				<li class="withSubNav clearfix">
-					<a href="blog/index.html">文章分享</a>
+					<a href="../blog/index.html">文章分享</a>
 					<ul class="subNav">
 						<li><a href="#">部落格</a></li>
 						<li><a href="#">TED TALK</a></li>
 						<li><a href="#">活動成果</a></li>
 					</ul>
 				</li>
-				<li><a href="aboutTEDx.html">關於TEDx</a></li>	
-				<li class="withSubNav clearfix"><a href="about.html">關於我們</a>
+				<li><a href="../aboutTEDx.html">關於TEDx</a></li>	
+				<li class="withSubNav clearfix"><a href="../about.html">關於我們</a>
 					<ul class="subNav">
 						<li><a href="#">團隊介紹</a></li>
 						<li><a href="#">團隊理念</a></li>
-						<li><a href="contact.html">聯繫我們</a></li>
+						<li><a href="../contact.html">聯繫我們</a></li>
 					</ul>
 				</li>
 	
@@ -90,7 +90,7 @@
 			<div class="control-group clearfix">
 			<label class="control-label" for="account">帳號</label>
 				<div class="controls">
-					<input id="account" name="account" type="text" placeholder="帳號" class="input-xlarge" required="">
+					<input id="account" name="account" type="text" placeholder="帳號" class="input-xlarge" required>
 				
 				</div>
 			</div>
@@ -99,7 +99,7 @@
 			<div class="control-group clearfix">
 				<label class="control-label" for="psd">密碼</label>
 				<div class="controls">
-					<input id="psd" name="psd" type="text" placeholder="密碼" class="input-xlarge" required="">
+					<input id="psd" name="psd" type="password" placeholder="密碼" class="input-xlarge" required>
 			
 				</div>
 			</div>
@@ -121,10 +121,10 @@
 <footer class="outer-small">
 	<div class="container clearfix">
 		<ul class="hrzUL foot_nav">
-			<li><a href="act/FromIdeaToAction.html">From Idea to Action</a></li>
-			<li><a href="sponsor.html">贊助我們</a></li>
-			<li><a href="contact.html">聯絡我們</a></li>
-			<li><a href="manageLogin.html">管理模式</a></li>
+			<li><a href="../act/FromIdeaToAction.html">From Idea to Action</a></li>
+			<li><a href="../sponsor.html">贊助我們</a></li>
+			<li><a href="../contact.html">聯絡我們</a></li>
+			<li><a href="login.html">管理模式</a></li>
 		</ul>
 	</div>
 </footer>
@@ -137,13 +137,37 @@
 <script type="text/javascript">
 </script>
 <!-- InstanceEndEditable -->
-<script src="js/jquery.min.js" type="text/javascript"></script>
-<script src="js/jquery-ui.js" type="text/javascript"></script>
+<script src="../js/jquery.min.js" type="text/javascript"></script>
+<script src="../js/jquery-ui.js" type="text/javascript"></script>
 <!--script src="js/bootstrap.min.js" type="text/javascript"></script-->
-<script src="js/parse-1.2.8.min.js" type="text/javascript"></script>
-<script src="js/TEDxNCCU.js" type="text/javascript"></script> 
+<script src="../js/parse-1.2.8.min.js" type="text/javascript"></script>
+<script src="../js/TEDxNCCU.js" type="text/javascript"></script> 
 <!-- InstanceBeginEditable name="js-2" -->
 <script type="text/javascript">
+
+$('#login').click(function(e){
+	Parse.initialize("BFuEvRNBwRW6MScfT6nIUrhZaKMBriF4VpAC0DwD", "MvYBNO5NQ6DeixPpLgmH60wQDQvQrf5nIrx6RHgy");
+	Parse.User.logIn('tedxnccu',$('#psd').val(), {//$('#account').val(), $('#psd').val()
+		success: function(user) {
+			alert ('success');
+			var currentUser = Parse.User.current();
+			if (currentUser)
+			{
+				window.location='manage.html';
+			}
+		},
+		error: function(user, error) {
+			alert(error.message);
+		}
+	});
+	e.preventDefault();
+
+	
+	
+});
+
+// By specifying no write privileges for the ACL, we can ensure the role cannot be altered.
+
 </script>
 <!-- InstanceEndEditable -->
 </body>
