--- a/Teachers/PostModern/index.html
+++ b/Teachers/PostModern/index.html
@@ -36,32 +36,40 @@
 		</div>
 	</div><!--header_inner-->
 
-	<div id="nav">
+	<nav>
 		<div id="nav_inner" class="container clearfix">
 			<ul id="navList" class="lineUL" >
 				<li><a href="index.html" class="active">首頁</a></li>
-				<li id="aboutBtn">
+				<li><a href="#">最新消息</a></li>
+				<li id="aboutBtn" class="withSubNav">
 					<a href="about.html">關於研討會</a>
-					<ul id="aboutNav" class="clearfix">
+					<ul id="aboutNav" class=" subNav clearfix">
 						<li><a href="#ideal">研討會宗旨</a></li>
 						<li><a href="#act">活動內容</a></li>
 						<li><a href="#subIssue">相關子題</a></li>
 						<li><a href="">流程</a></li>
-						<li><a href="join.html">報名</a></li>
+						
 						<li><a href="">住宿</a></li>
 						<li><a href="">Q&amp;A</a></li>
 					</ul>
 				</li>
-				<li><a href="members.html">研討會貴賓</a></li>
-				<li><a href="publications.html">研討會發表</a></li>
-				<li><a href="news.html">最新消息</a></li>
+				<li class="withSubNav">
+					<a href="members-china.html">研討會貴賓</a>
+					<ul class="subNav clearfix">
+						<li><a href="members-taiwan.html">台灣與會學者</a></li>
+						<li><a href="members-china.html">大陸與會學者</a></li>
+					</ul>
+				</li>
+				<li><a href="join.html">報名</a></li>
+				<li><a href="#">研討會發表</a></li>
+
 			</ul>
 			<ul id="navListRight" class="lineUL" >
-				<li><a href="http://edu.nccu.edu.tw/main.php">政大教育</a></li>
-				<li><a href="play.html">政大周邊</a></li>
+				<li><a href="#">政大教育</a></li>
+				<li><a href="#">政大周邊</a></li>
 			</ul>
 		</div>
-	</div>
+	</nav>
 </header>
 
 
@@ -220,7 +228,7 @@
 			</div>
 			<div id="contact" class="footerInfoBox" style="width:400px;">
 				<h4>聯絡方式</h4>
-				<p>電話：(02)2939-3091轉62331或62281</p>
+				<p>電話：(02)2939-3091轉62331或63809</p>
 				<p>傳真：(02)29387717</p>
 				<p>E-Mail：nccuedu@nccu.edu.tw</p>
 				<p>地址：11605 台北市文山區指南路2段64號 國立政治大學教育學系</p>
