--- a/Teachers/PostModern/join_success.html
+++ b/Teachers/PostModern/join_success.html
@@ -22,21 +22,40 @@
 		</div>
 	</div><!--header_inner-->
 
-	<div id="nav">
+	<nav>
 		<div id="nav_inner" class="container clearfix">
 			<ul id="navList" class="lineUL" >
 				<li><a href="index.html" class="active">首頁</a></li>
-				<li><a href="about.html">關於研討會</a></li>
-				<li><a href="members.html">研討會貴賓</a></li>
-				<li><a href="#">研討會發表</a></li>
 				<li><a href="#">最新消息</a></li>
+				<li id="aboutBtn" class="withSubNav">
+					<a href="about.html">關於研討會</a>
+					<ul id="aboutNav" class=" subNav clearfix">
+						<li><a href="#ideal">研討會宗旨</a></li>
+						<li><a href="#act">活動內容</a></li>
+						<li><a href="#subIssue">相關子題</a></li>
+						<li><a href="">流程</a></li>
+						
+						<li><a href="">住宿</a></li>
+						<li><a href="">Q&amp;A</a></li>
+					</ul>
+				</li>
+				<li class="withSubNav">
+					<a href="members-china.html">研討會貴賓</a>
+					<ul class="subNav clearfix">
+						<li><a href="members-taiwan.html">台灣與會學者</a></li>
+						<li><a href="members-china.html">大陸與會學者</a></li>
+					</ul>
+				</li>
+				<li><a href="join.html" class="active">報名</a></li>
+				<li><a href="#">研討會發表</a></li>
+
 			</ul>
 			<ul id="navListRight" class="lineUL" >
 				<li><a href="#">政大教育</a></li>
-				<li><a href="http://www.nccu.edu.tw">政大周邊</a></li>
+				<li><a href="#">政大周邊</a></li>
 			</ul>
 		</div>
-	</div>
+	</nav>
 </header>
 <footer>
 </footer>
