--- a/Teachers/PostModern/members-china.html
+++ b/Teachers/PostModern/members-china.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Members</title>
+<title>後現代研討會-大陸與會學者</title>
 <link href="css/reset.css" rel="stylesheet" type="text/css">
 <link href="css/jquery-ui.css" rel="stylesheet" type="text/css">
 <link href="css/PostModern.css" rel="stylesheet" type="text/css">
@@ -28,38 +28,51 @@
 		</div>
 	</div><!--header_inner-->
 
-	<div id="nav">
+	<nav>
 		<div id="nav_inner" class="container clearfix">
 			<ul id="navList" class="lineUL" >
-				<li><a href="index.html">首頁</a></li>
-				<li id="aboutBtn">
+				<li><a href="index.html" class="active">首頁</a></li>
+				<li><a href="#">最新消息</a></li>
+				<li id="aboutBtn" class="withSubNav">
 					<a href="about.html">關於研討會</a>
-					<ul id="aboutNav" class="clearfix">
+					<ul id="aboutNav" class=" subNav clearfix">
 						<li><a href="#ideal">研討會宗旨</a></li>
 						<li><a href="#act">活動內容</a></li>
 						<li><a href="#subIssue">相關子題</a></li>
 						<li><a href="">流程</a></li>
-						<li><a href="join.html">報名</a></li>
+						
 						<li><a href="">住宿</a></li>
 						<li><a href="">Q&amp;A</a></li>
 					</ul>
 				</li>
-				<li><a href="members.html" class="active">研討會貴賓</a></li>
+				<li class="withSubNav">
+					<a href="members-china.html">研討會貴賓</a>
+					<ul class="subNav clearfix">
+						<li><a href="members-taiwan.html">台灣與會學者</a></li>
+						<li><a href="members-china.html">大陸與會學者</a></li>
+					</ul>
+				</li>
+				<li><a href="join.html">報名</a></li>
 				<li><a href="#">研討會發表</a></li>
-				<li><a href="#">最新消息</a></li>
+
 			</ul>
 			<ul id="navListRight" class="lineUL" >
 				<li><a href="#">政大教育</a></li>
 				<li><a href="#">政大周邊</a></li>
 			</ul>
 		</div>
-	</div>
+	</nav>
 </header>
 
 <div id="content">
+
+	
+
 	<div id="members" class="container clearfix">
-		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/方光華.jpg" alt="方光華"  ></div>
+		<h3>大陸與會貴賓</h3>
+		<div class="clearfix">
+			<div class="member clearfix">
+			<div class="photo"><img src="img/scholars/china/方光華.jpg" alt="方光華"  ></div>
 			<div class="memIntro">
 				<h4>方光華</h4>
 				<p>西北大學校長</p>
@@ -68,7 +81,7 @@
 		</div>
 
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/史靜寰.jpg" alt="史靜寰" ></div>
+			<div class="photo"><img src="img/scholars/china/史靜寰.jpg" alt="史靜寰" ></div>
 			<div class="memIntro">
 				<h4>史靜寰</h4>
 				<p>清華大學教育研究院常務副院長</p>
@@ -77,7 +90,7 @@
 		</div>
 
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/石中英.jpg" alt="石中英" ></div>
+			<div class="photo"><img src="img/scholars/china/石中英.jpg" alt="石中英" ></div>
 			<div class="memIntro">
 				<h4>石中英</h4>
 				<p>北京師範大學教育學部部長</p>
@@ -86,7 +99,7 @@
 		</div>
 
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/朱益明.jpg" alt="朱益明" height="160"></div>
+			<div class="photo"><img src="img/scholars/china/朱益明.jpg" alt="朱益明" height="160"></div>
 			<div class="memIntro">
 				<h4>朱益明</h4>
 				<p>華東師範大學教育學系系主任</p>
@@ -95,7 +108,7 @@
 		</div>
 
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/朴雪涛.jpg" alt="朴雪濤" height="160"></div>
+			<div class="photo"><img src="img/scholars/china/朴雪涛.jpg" alt="朴雪濤" height="160"></div>
 			<div class="memIntro">
 				<h4>朴雪濤</h4>
 				<p>瀋陽師範大學教育科學院院長</p>
@@ -104,7 +117,7 @@
 		</div>
 
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/杜成憲.jpg" alt="杜成憲" height="160"></div>
+			<div class="photo"><img src="img/scholars/china/杜成憲.jpg" alt="杜成憲" height="160"></div>
 			<div class="memIntro">
 				<h4>杜成憲</h4>
 				<p>華東師範大學教育史研究所所長</p>
@@ -113,7 +126,7 @@
 		</div>
 
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/肖少北.jpg" alt="肖少北" height="160"></div>
+			<div class="photo"><img src="img/scholars/china/肖少北.jpg" alt="肖少北" height="160"></div>
 			<div class="memIntro">
 				<h4>肖少北</h4>
 				<p>海南師範大學教育科學學院院長</p>
@@ -121,7 +134,7 @@
 			</div>
 		</div>
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/周介銘.jpg" alt="周介銘" height="160"></div>
+			<div class="photo"><img src="img/scholars/china/周介銘.jpg" alt="周介銘" height="160"></div>
 			<div class="memIntro">
 				<h4>周介銘</h4>
 				<p>四川師範大學校長</p>
@@ -130,7 +143,7 @@
 		</div>
 
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/孟繁華.jpg" alt="孟繁華"></div>
+			<div class="photo"><img src="img/scholars/china/孟繁華.jpg" alt="孟繁華"></div>
 			<div class="memIntro">
 				<h4>孟繁華</h4>
 				<p>首都師範大學副校長</p>
@@ -139,7 +152,7 @@
 		</div>
 		
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/胡娟.jpg" alt="胡  娟"></div>
+			<div class="photo"><img src="img/scholars/china/胡娟.jpg" alt="胡  娟"></div>
 			<div class="memIntro">
 				<h4>胡  娟</h4>
 				<p>中國人民大學教育學院院長</p>
@@ -148,7 +161,7 @@
 		</div>
 		
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/范國睿.jpg" alt="范國睿"></div>
+			<div class="photo"><img src="img/scholars/china/范國睿.jpg" alt="范國睿"></div>
 			<div class="memIntro">
 				<h4>范國睿</h4>
 				<p>華東師範大學教育科學學院院長</p>
@@ -157,7 +170,7 @@
 		</div>
 		
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/孫鈺華.jpg" alt="孫鈺華"></div>
+			<div class="photo"><img src="img/scholars/china/孫鈺華.jpg" alt="孫鈺華"></div>
 			<div class="memIntro">
 				<h4>孫鈺華</h4>
 				<p>新疆師範大學教育科學學院院長</p>
@@ -166,7 +179,7 @@
 		</div>
 		
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/徐小洲.jpg" alt="徐小洲"></div>
+			<div class="photo"><img src="img/scholars/china/徐小洲.jpg" alt="徐小洲"></div>
 			<div class="memIntro">
 				<h4>徐小洲</h4>
 				<p>浙江大學教育學院院長</p>
@@ -175,7 +188,7 @@
 		</div>
 		
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/徐緒卿.jpg" alt="徐緒卿"></div>
+			<div class="photo"><img src="img/scholars/china/徐緒卿.jpg" alt="徐緒卿"></div>
 			<div class="memIntro">
 				<h4>徐緒卿</h4>
 				<p>浙江樹人大學校長</p>
@@ -184,7 +197,7 @@
 		</div>
 		
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/陳永明.jpg" alt="陳永明"></div>
+			<div class="photo"><img src="img/scholars/china/陳永明.jpg" alt="陳永明"></div>
 			<div class="memIntro">
 				<h4>陳永明</h4>
 				<p>上海師範大學教育學院院長</p>
@@ -193,7 +206,7 @@
 		</div>
 		
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/程斯輝.jpg" alt="程斯輝"></div>
+			<div class="photo"><img src="img/scholars/china/程斯輝.jpg" alt="程斯輝"></div>
 			<div class="memIntro">
 				<h4>程斯輝</h4>
 				<p>武漢大學教育學院院長</p>
@@ -202,7 +215,7 @@
 		</div>
 		
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/華長慧.jpg" alt="華長慧"></div>
+			<div class="photo"><img src="img/scholars/china/華長慧.jpg" alt="華長慧"></div>
 			<div class="memIntro">
 				<h4>華長慧</h4>
 				<p>寧波諾丁漢大學黨委書記</p>
@@ -211,7 +224,7 @@
 		</div>
 		
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/楊東平.jpg" alt="楊東平"></div>
+			<div class="photo"><img src="img/scholars/china/楊東平.jpg" alt="楊東平"></div>
 			<div class="memIntro">
 				<h4>楊東平</h4>
 				<p>北京理工大學教育學院院長</p>
@@ -220,7 +233,7 @@
 		</div>
 		
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/褚宏啟.jpg" alt="褚宏啟"></div>
+			<div class="photo"><img src="img/scholars/china/褚宏啟.jpg" alt="褚宏啟"></div>
 			<div class="memIntro">
 				<h4>褚宏啟</h4>
 				<p>北京師範大學教育學部副部長</p>
@@ -229,7 +242,7 @@
 		</div>
 		
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/劉海峰.jpg" alt="劉海峰"></div>
+			<div class="photo"><img src="img/scholars/china/劉海峰.jpg" alt="劉海峰"></div>
 			<div class="memIntro">
 				<h4>劉海峰</h4>
 				<p>廈門大學教育研究院院長</p>
@@ -238,7 +251,7 @@
 		</div>
 		
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/鄭燕祥.jpg" alt="鄭燕祥"></div>
+			<div class="photo"><img src="img/scholars/china/鄭燕祥.jpg" alt="鄭燕祥"></div>
 			<div class="memIntro">
 				<h4>鄭燕祥</h4>
 				<p>香港教育學院署理校長</p>
@@ -247,7 +260,7 @@
 		</div>
 		
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/盧曉中.jpg" alt="盧曉中"></div>
+			<div class="photo"><img src="img/scholars/china/盧曉中.jpg" alt="盧曉中"></div>
 			<div class="memIntro">
 				<h4>盧曉中</h4>
 				<p>華南師範大學教育學院院長</p>
@@ -256,14 +269,14 @@
 		</div>
 		
 		<div class="member clearfix">
-			<div class="photo"><img src="img/scholars/謝維和.jpg" alt="謝維和"></div>
+			<div class="photo"><img src="img/scholars/china/謝維和.jpg" alt="謝維和"></div>
 			<div class="memIntro">
 				<h4>謝維和</h4>
 				<p>清華大學副校長</p>
 				<p>中國社會科學院研究生院哲學博士</p>
 			</div>
 		</div>
-
+		</div>
 
 
 
