--- a/Teachers/Robin/index.html
+++ b/Teachers/Robin/index.html
@@ -6,26 +6,12 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>榮政老師的網站</title>
+<title>陳榮政老師-個人簡介</title>
 <link href="css/jquery-ui.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
 <link href="css/robin-all.css" rel="stylesheet" type="text/css">
 <style>
-
-@media screen and (min-width: 1500px) {
-body {
-	transform: scale(1.5);
-	-webkit-transform: scale(1.5); 
-	-webkit-transform-origin: 50% 0; 
-	-moz-transform: scale(1.5); 
-	-moz-transform-origin: 50% 0; 
-	-o-transform: scale(1.5); 
-	-o-transform-origin: 50% 0; 
-	-ms-transform: scale(1.5); 
-	-ms-transform-origin: 50% 0;}
-}
-
 
 </style>
 </head>
@@ -61,7 +47,12 @@ body {
   	<article>
 
     	<h3>個人簡介</h3>
-      <p>今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，今天天氣好熱，</p>
+			<p>國立政治大學教育學系助理教授</p>
+			<p>西雅圖太平洋大學(Seattle Pacific University)通訊教授(Coordinating Professor)</p>
+			<p>英國倫敦大學教育政策聯位學位</p>
+			<p>國立暨南國際大學比較教育博士</p>
+			<p>國立陽明大學衛生福利研究所</p>
+			<p>國立屏東師範學院社會科教育學系</p>
     </article>
 
   	<a name="exp"></a>
