--- a/Teachers/Robin/publications.html
+++ b/Teachers/Robin/publications.html
@@ -2,25 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>榮政老師的網站</title>
+<title>陳榮政老師-學術發表</title>
 <link href="css/jquery-ui.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
 <link href="css/robin-all.css" rel="stylesheet" type="text/css">
 <style>
-@media screen and (min-width: 1500px) {
-body {
-	transform: scale(1.5);
-	-webkit-transform: scale(1.5); 
-	-webkit-transform-origin: 50% 0; 
-	-moz-transform: scale(1.5); 
-	-moz-transform-origin: 50% 0; 
-	-o-transform: scale(1.5); 
-	-o-transform-origin: 50% 0; 
-	-ms-transform: scale(1.5); 
-	-ms-transform-origin: 50% 0;}
-}
-
 </style>
 </head>
 <body>
