--- a/Teachers/Robin/teaching.html
+++ b/Teachers/Robin/teaching.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html>
 <head>
+
+<!--[if lt IE 9]><script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script><![endif]-->
+
 <meta charset="utf-8">
-<title>陳榮政老師-獲獎紀錄</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>陳榮政老師-授課科目</title>
 <link href="css/jquery-ui.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
 <link href="css/robin-all.css" rel="stylesheet" type="text/css">
 <style>
+
 </style>
 </head>
 <body>
@@ -25,36 +30,34 @@
   
     <ul id="nav">
       <a href="index.html"><li id="introduction" class="navBtn" ><p>個人簡介</p></li></a>
-      <a href="teaching.html"><li id="teaching" class="navBtn"><p>授課內容</p></li></a>
+      <a href="teaching.html"><li id="teaching" class="navBtn active"><p>授課內容</p></li></a>
       <a href="publications.html"><li id="publication" class="navBtn"><p>學術發表與研究</p></li></a>
       <a href="instruct.hmtl"><li id="instruct" class="navBtn"><p>論文指導</p></li></a>
       <a href="international.html"><li id="international" class="navBtn"><p>國際交流</p></li></a>
-      <a href="#"><li id="awards" class="navBtn active"><p>獲獎紀錄</p></li></a>
+      <a href="awards.html"><li id="awards" class="navBtn"><p>獲獎紀錄</p></li></a>
     </ul>
 
    
   </div>
 	
+  
   <div id="content">
 		<article>
-     	<h3>傑出表現</h3>
-      <ol class="publist">
-        <li>Innovation Research Method  Award, 2012 International Conference of Innovative Research in a Challenge and  Changing World.</li>
-        <li>民98年獲「臺灣教育社會學會」頒贈博士論文獎第一名。</li>
-        <li>民98年獲「財團法人賈馥茗教育基金會」頒贈博士論文獎第一名。<br>
-          （教育行政與政策類）</li>
-        <li>民97年獲「中華民國比較教育學會」頒贈博士論文獎第一名。</li>
-        <li>民97年獲「李連教育基金會」頒贈教育領域博士論文優等獎。</li>
-        <li>民97年獲頒中華民國斐陶斐研究學會榮譽會員。</li>
-        <li>民95年獲教育部「獎助國內優秀博士生赴國外一流大學研修計畫」全額補助赴倫敦大學進修，為教育領域唯一受獎名額。</li>
-        <li>民83年服役少尉預官期間獲「國軍軍事著作」金像獎。</li>
-        <li>民79年獲選全國大專優秀青年，獲總統召見頒獎。</li>
-        <li>民78年獲全國大專英語演講比賽優勝。</li>
-      </ol>
-
-    </article>
-  </div>
-
+			<a name="teaching"></a>
+			<h3>授課科目</h3>
+			<h4>10102 </h4>
+			<p>大學入門（政大書院通識課）3學分</p>
+			<p>教學原理（大一、大二選修）2學分</p>
+			<p>教育改革（大三、大四選修）2學分</p>
+			
+			<h4>10201</h4>
+			<p>各國教育行政比較（教育政策與行政研究所碩士班）3學分</p>
+			<p>教育視導（大三、大四選修）3學分</p>
+			<p>人權與人權教育 （英語授課; 大一、大二選修）2學分</p>
+			
+			
+		</article>
+	</div>
   
   <div id="rightArea">
     <div id="searchBar">
@@ -65,6 +68,10 @@
         <div><input type="hidden" name="sitesearch" value="http://www3.nccu.edu.tw/~ihchang/"></div>
       </form>
     </div>
+  	<ul id="subNav">
+      <a href="#" class="goMark"><li><h5>1011</h5></li></a>
+      <a href="#" class="goMark"><li><h5>1012</h5></li></a>
+    </ul>
     
     <div id="something">
     </div>
