--- a/TEDx/manage/manage.html
+++ b/TEDx/manage/manage.html
@@ -5,7 +5,19 @@
 <link rel="shortcut icon" type="image/x-icon" href="http://1.gravatar.com/blavatar/5eb168b0154768602b7da05b54081381?s=16" sizes="16x16">
 <link rel="icon" type="image/x-icon" href="http://1.gravatar.com/blavatar/5eb168b0154768602b7da05b54081381?s=16" sizes="16x16">
 <!-- InstanceBeginEditable name="head1" -->
-<title>TEDxNCCU 文章分享</title>
+<title>TEDxNCCU管理頁面</title>
+
+<script src="../js/parse-1.2.8.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+	Parse.initialize("BFuEvRNBwRW6MScfT6nIUrhZaKMBriF4VpAC0DwD", "MvYBNO5NQ6DeixPpLgmH60wQDQvQrf5nIrx6RHgy");
+	var currentUser = Parse.User.current();
+	if (currentUser){}else { alert ('你沒有權限，請重新登入'); window.location="login.html"}
+</script>
+<noscript>
+<style>
+	.outer { display:none;}
+</style>
+</noscript>
 <!-- InstanceEndEditable -->
 <link href="../css/jquery-ui.css" rel="stylesheet" type="text/css">
 <!--link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"-->
@@ -14,12 +26,7 @@
 <link href="../css/tedxnccu2.css" rel="stylesheet" type="text/css">
 <!-- InstanceBeginEditable name="head2" -->
 <style>
-/*article*/
-.art-pre { width:auto; margin-bottom:20px; background-color:rgba(255,255,255,.8);}
-.art-pre-pic { margin-right:20px; margin-bottom:20px; float:left; box-shadow:0px 2px 5px 1px #999999; height:200px; }
-.art-pre-info { padding:20px; width:auto;}
-.art-pre-info > h3 { margin-bottom:10px; color:#FF0000; font-size:1.2em; font-weight:bold;}
-.art-pre-info > p { color:black; margin-bottom:0px;}
+.managePage-pre { height:200px; background:white;} 
 
 </style>
 <!-- InstanceEndEditable -->
@@ -43,7 +50,7 @@
 					</ul>
 				</li>
 				<li class="withSubNav clearfix">
-					<a href="index.html">文章分享</a>
+					<a href="../blog/index.html">文章分享</a>
 					<ul class="subNav">
 						<li><a href="#">部落格</a></li>
 						<li><a href="#">TED TALK</a></li>
@@ -70,10 +77,10 @@
 	<div class="bannerPic-small-cover">
 		<div class="container">
 			<div class="title">
-				<h1>TEDxNCCU 文章分享</h1>
+				<h1>TEDxNCCU管理頁面</h1>
 			</div>
 			<div style="padding:10px; color:white; display:block; ">
-				文章列表&nbsp;&nbsp; >> &nbsp;所有文章&nbsp;
+				管理主頁&nbsp;&nbsp; >> 
 			</div>
 
 		</div>
@@ -89,19 +96,24 @@
 </div>
 
 
-<div id="content" class="outer bg">
-	<div class="container clearfix apdArea">
-		<!--div class="leftArea ">
-			<h3 class="tag">文章列表</h3>
-			<hr />
-		</div-->
-	</div> <!-- /container-->
+
+<div class="outer bg">
+	<div class="container managePage-pre block">
+		<div class="padding">
+			<h3><a href="../blog/manage.html">管理文章</a></h3>
+			<h3><a href="../blog/edit.html">發表文章</a></h3>
+		</div>
+	</div>
 </div>
-<div class="container">
-	<form class="pageForm" action="view.html" method="get">
-		<input id="pageInput" name="blog" hidden="true" value="0">
-	</form>
+<div class="outer bg">
+	<div class="container managePage-pre block">
+	</div>
 </div>
+<noscript>
+<h1>
+	如果沒有 javascript 則無法執行編輯動作!!
+</h1>
+</noscript>
 <!-- InstanceEndEditable -->
 
 
@@ -111,7 +123,7 @@
 			<li><a href="../act/FromIdeaToAction.html">From Idea to Action</a></li>
 			<li><a href="../sponsor.html">贊助我們</a></li>
 			<li><a href="../contact.html">聯絡我們</a></li>
-			<li><a href="../manage/login.html">管理模式</a></li>
+			<li><a href="login.html">管理模式</a></li>
 		</ul>
 	</div>
 </footer>
@@ -122,6 +134,7 @@
 
 <!-- InstanceBeginEditable name="js-1" -->
 <script type="text/javascript">
+
 </script>
 <!-- InstanceEndEditable -->
 <script src="../js/jquery.min.js" type="text/javascript"></script>
@@ -131,82 +144,7 @@
 <script src="../js/TEDxNCCU.js" type="text/javascript"></script> 
 <!-- InstanceBeginEditable name="js-2" -->
 <script type="text/javascript">
-
-/*Last bind first go !!!*/
-
-
-$('.apdArea').on('click','.art-pre-tit',function(e){
-	getData(e);
-});
-//$('.art-pre').on('click','.art-pre-pic',function(e){getData(e)});
-
-function getData (e){
-	var p = $($(e.currentTarget).parents('.art-pre')[0]).data('blog');
-	$('#pageInput').val(p);
-	$('.pageForm').submit();
-	return false 
-
-	//e.preventDefault();
-	//else return false;
-}
-
-var blogId;
-var blog;
-function getURLParameter(name) {
-	return decodeURI(
-		(RegExp(name + '=' + '(.+?)(&|$)').exec(location.search)||[,null])[1]
-	);
-}
-$(document).ready(function(e) {
-	//blogId = '8MROTNof9T'//'My4BYgu7Il' ;//(getURLParameter('blog'));
-	pullBlog ();
-	
-});
-
-var $apd = $('.apdArea');
-function pullBlog () {
-	Parse.initialize("BFuEvRNBwRW6MScfT6nIUrhZaKMBriF4VpAC0DwD", "MvYBNO5NQ6DeixPpLgmH60wQDQvQrf5nIrx6RHgy");
-	var TEDxBLOG = Parse.Object.extend("TEDxBLOG");
-	var query = new Parse.Query(TEDxBLOG);
-	query.find({
-		success:function (o){
-			for (var i = 0 ; i < o.length ; i++){
-				blog = getBlog (o[i]);
-				show (blog);
-			}
-		},
-		error:function (o,e){
-			alert('!!');
-		}	
-	})
-}
-
-function getBlog (o){
-	var obj = {
-		'subject': o.get('subject'),
-		'type': o.get('type'),
-		'writer': o.get('writer'),
-		'date': o.get('date'),
-		'preImg': o.get('preImg'),
-		'abstract': o.get('abstract'),
-		'content': o.get('content'),
-		'id':o.id
-	}
-	return obj;
-}
-
-function show (blog){
-	if (!blog.subject) { return false }//alert ('資料庫問題，請先參閱其他文章');
-	var a = '<div data-blog="'+ blog.id +'" class="art-pre clearfix block">				<a class="art-pre-pic"  title="'+ blog.subject  +'" href="#"><img width="200" height="200" src="'+ blog.preImg  +'"></a>				<div class="art-pre-info" >					<h3><a  href="#" class="art-pre-tit"  title="'+ blog.subject +'">'+ blog.subject +'</a></h3>					<span class="date">'+ blog.date +'</span>					<p>'+ blog.abstract +'</p>				</div>			</div>';
-	$apd.append(a);
-}
-
-
- 		
-
-
 </script>
-
 <!-- InstanceEndEditable -->
 </body>
 <!-- InstanceEnd --></html>
