--- a/Teachers/PostModern/_blank.html
+++ b/Teachers/PostModern/_blank.html
@@ -27,7 +27,7 @@
 			<ul id="navList" class="lineUL" >
 				<li><a href="index.html" class="active">首頁</a></li>
 				<li><a href="about.html">關於研討會</a></li>
-				<li><a href="members.html">研討會貴賓</a></li>
+				<li><a href="members-china.html">研討會貴賓</a></li>
 				<li><a href="#">研討會發表</a></li>
 				<li><a href="#">最新消息</a></li>
 			</ul>
