--- a/Teachers/PostModern/publications.html
+++ b/Teachers/PostModern/publications.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <!-- InstanceBeginEditable name="title" -->
-<title>PostModern</title>
+<title>後現代教育論壇--研討會發表</title>
 <!-- InstanceEndEditable -->
 <link href="css/reset.css" rel="stylesheet" type="text/css">
 <link href="css/jquery-ui.css" rel="stylesheet" type="text/css">
@@ -33,12 +33,12 @@
 			<ul id="navList" class="lineUL" >
 				<li><a href="index.html">首頁</a></li>
 				<li><a href="#">最新消息</a></li>
-				<li id="aboutBtn" class="withSubNav"> <a href="about.html" class="active">研討會內容</a>
+				<li id="aboutBtn" class="withSubNav"> <a href="about.html" class="active">關於研討會</a>
 					<ul id="aboutNav" class=" subNav clearfix">
 						<li><a href="#ideal">研討會宗旨</a></li>
 						<li><a href="#act">活動內容</a></li>
 						<li><a href="#subIssue">相關子題</a></li>
-						<li><a href="agenda.html">研討會議程</a></li>
+						<li><a href="">流程</a></li>
 						<li><a href="">住宿</a></li>
 						<li><a href="">Q&amp;A</a></li>
 					</ul>
@@ -53,82 +53,76 @@
 				<li><a href="#">研討會發表</a></li>
 			</ul>
 			<ul id="navListRight" class="lineUL" >
-				<li><a href="//www.educ.nccu.edu.tw">政大教育</a></li>
+				<li><a href="#">政大教育</a></li>
 				<li><a href="#">政大周邊</a></li>
 			</ul>
 		</div>
 	</nav>
 	<!-- InstanceEndEditable -->
 	<!-- InstanceBeginEditable name="header" -->
-	
-	
 	<!-- InstanceEndEditable -->
 	</header>
 <!-- InstanceBeginEditable name="content" -->
+
 <div id="content">
-	<div id="about_Inner" class="container clearfix">
-		<!--div id="left_Nav" class="leftContainer">
-			<ul id="leftNav">
-			</ul>
-		</div-->
-		<h3><a name="ideal"></a>計畫宗旨</h3>
-		<p>有鑑於後現代主義於現今社會持續的教育影響，本次國際學術研討會，旨在圖思兩岸教育研究交流之相關發展，俾利體現後現代論述於教育場域落實之精神，特針對當前兩岸文化與教育交流之未來發展，提供一個學術論述與意見交流之具體平台，藉此而舉辦「第一屆海峽兩岸教育學院領導人論壇---後現代教育發展與兩岸教育新方向」，經由兩岸教育學院領導人之學術交流及高峰論壇，提出巨觀之教育思考新方向，共同擘劃兩岸教育交流之新願景與永續發展藍圖。</p>
-
-		<h3><a name="act"></a>活動內容</h3>
-		<p>會議內容包含高峰論壇、論文發表、綜合討論以及外國學者參訪與演講等四項。</p>
-		<p><strong>一、高峰論壇：</strong></p>
-		<p>兩岸教育不論是在實際經營層面、發展現況及未來趨勢的議題，都存在許多互相學習與交流之處，本次研討會透過高峰論壇促進兩岸教育之學術交流，並共同關心兩岸教育領導與經營策略的未來，相信未來可攜手共進，為兩岸開創新局。</p>
-		<p><strong>二、論文發表：</strong></p>
-		<p>本論壇規劃出11場次的論文發表與（詳細內容請參見議程），對於後現代思潮所影響之教育領導、教育行政、學校經營、教育評鑑、課程教學、教育財政、教育哲學、教育史學、教育心理、輔導諮商與校園建築等議題，深入探討。</p>
-		<p><strong>三、綜合座談：</strong></p>
-		<p>將由全體與會來賓共同參與討論。</p>
-		<p><strong>四、外國學者參訪與演講：</strong></p>
-		<p>在研討會之餘安排參觀國內政經文教建設，並赴各大學進行學術演講和座談。</p>
-
-		
-		<h3><a name="subIssues"></a>相關子題</h3>		
-		<table class="table" >
-			<tr>
-				<th>子題名稱</th><th>子題作者</th>
-			</tr>
-			<tr>
-				<td>後現代教育領導</td><td><p>秦夢群--國立政治大學教育行政與政策研究所所長</p><p>黃貞裕--敏惠醫護管理專科學校幼兒保育科助理教授</p></td>
-			</tr>
-			<tr>
-				<td>後現代教育行政</td><td><p>黃乃熒--臺灣師範大學教育學系教授</p></td>
-			</tr>
-			<!--tr>
-				<td>後現代學校經營</td><td><p></p></td>
-			</tr-->
-			<tr>
-				<td>後現代教育評鑑</td><td><p>林海清--中台科技大學文教所教授兼副校長</p></td>
-			</tr>
-			<tr>
-				<td>後現代課程教學</td><td><p>夏惠汶--</p></td>
-			</tr>
-			<!--tr>
-				<td>後現代教育財政</td><td><p></p></td>
-			</tr-->
-			<tr>
-				<td>後現代教育哲學</td><td><p>溫明麗--台灣大學教授</p></td>
-			</tr>
-			<tr>
-				<td>後現代教育史學</td><td><p>周愚文--國立臺灣師範大學教育學系教授</p></td>
-			</tr>
-			<!--tr>
-				<td>後現代教育心理</td><td><p>陳惠萍--國立臺南大學教育系教授兼任教務長</p><p>黃秀霜--國立臺南大學教育系教授兼任校長</p></td>
-			</tr-->
-			<tr>
-				<td>後現代輔導諮商</td><td><p>林香君--佛光大學副教授 生命學研究中心主任</p></td>
-			</tr>
-			<tr>
-				<td>後現代校園建築</td><td><p>湯志民--國立政治大學教育學院院長</p></td>
-			</tr>
-		</table>
-		
-			
-	</div>
+	<div class="container">
+	<h3>研討會發表</h3>
+	<table class="table">
+	<tr>
+		<th>文章名稱</th>
+		<th>作者</th>
+		<th>發表時間</th>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+	<tr>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+		<td>&nbsp;</td>
+	</tr>
+</table>
 </div>
+</div>
+
+
 <!-- InstanceEndEditable -->
 <footer>
 	<div id="footerInner" class="container">
